Set up live reload with BrowserSyc.io

--- a/builds/dev/index.html
+++ b/builds/dev/index.html
@@ -1,2 +1,22 @@
-<DOCTYPE html5>
-	
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta description="">
+	<title>Page layout</title>
+	<link rel="stylesheet" href="./builds/dev/css/styles.css">
+	<!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+  <![endif]-->
+</head>
+<body>
+	<header></header>
+	<main>
+		<h1 class="hi">Get Fucked!</h1>
+		<p>hey pal!</p>
+	</main>
+	<footer></footer>
+	<script src="./builds/dev/js/scripts.js"></script>
+</body>
+</html>
+		
