--- a/builds/dev/index.html
+++ b/builds/dev/index.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
 	<meta charset="utf-8">
-	<meta description="">
-	<title>Page layout</title>
+	<!--Double curly braces load data from the top of pages -->
+	<meta description="Minimal Framework is a modern HTML5, mobile-first framework built with Sass and Gulp on a 12 column responsive grid. The framework boasts all of the modern accesiblility features and tools developers use in builds but none of the style bloat that needs to be overwritten like most frameworks. The only boilerplate styling is normalize.scss, our 12 column responsive grid and basic html5 Sass nesting.">
+	<meta property="og:title" content="Minimal Framework | Mobile-first, Responsive, Light-weight" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:description" content="Minimal Framework is a modern HTML5, mobile-first framework built with Sass and Gulp on a 12 column responsive grid. The framework boasts all of the modern accesiblility features and tools developers use in builds but none of the style bloat that needs to be overwritten like most frameworks. The only boilerplate styling is normalize.scss, our 12 column responsive grid and basic html5 Sass nesting." />
+	<title>Minimal Framework | Mobile-first, Responsive, Light-weight</title>
+	<link rel="icon" type="image/png" href="./builds/dev/img/favicon.png">
 	<link rel="stylesheet" href="./builds/dev/css/styles.css">
 	<!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
 <body>
-	<header></header>
-	<main>
-		<h1 class="hi">Get Fucked!</h1>
-		<p>hey pal!</p>
-	</main>
-	<footer></footer>
-	<script src="./builds/dev/js/scripts.js"></script>
+
+<header></header>
+<main>
+<h1>Get Fucked!</h1>
+<p>hey pal!</p>
+</main>
+<footer></footer>
+
+
+<script src="./builds/dev/js/scripts.js"></script>
 </body>
 </html>
-		
