Remove "only": "gulpfile.babel.js" from bablrc

--- a/app/index.html
+++ b/app/index.html
@@ -15,13 +15,13 @@
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="Web Starter Kit">
+    <meta name="application-name" content="SVG Weather">
     <link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192.png">
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Web Starter Kit">
+    <meta name="apple-mobile-web-app-title" content="SVG Weather">
     <link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png">
 
     <!-- Tile icon for Win8 (144x144 + tile color) -->
@@ -29,7 +29,7 @@
     <meta name="msapplication-TileColor" content="#2F3BA2">
 
     <!-- Color the status bar on mobile devices -->
-    <meta name="theme-color" content="#2F3BA2">
+    <meta name="theme-color" content="#000000">
 
 
 
@@ -208,6 +208,7 @@
               <rect class="bottom-lid" x="105" y="90" width="40" height="40" fill="#ffff00"/>
               <path d="M 50 125 Q 100 175 150 125" stroke="black"
                     stroke-width="5" fill="#ffff00" />
+              </svg>
 
           </div>
           <div class="sun-band-red">
@@ -566,11 +567,6 @@
           </div>
         </div>
       </main>
-
-
-    </div>
-
-    <script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
     <!-- build:js(app/) ../../scripts/main.min.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
